public/stylesheets/style.scss
/* ... */
a{
color:$prim-darker !important;
}
nav{
-webkit-box-shadow: none;
        box-shadow: none;
}
.bottom{
position: absolute;
bottom:0;
left:0;
text-align: center;
font-family: $robo;
width: 100%;
line-height: 0px;
}
.main-wrap{
height: 100vh;
margin: 0;
.form{
margin-top:3em;
}
}
.card{
  border-radius: 25px !important;
}

.list-wrap{
position: absolute;
top:40%;
-webkit-transform: translateY(-40%);
    -ms-transform: translateY(-40%);
        transform: translateY(-40%);
}

.move{
position: absolute;
left: 50%;
-webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
        transform: translateX(-50%);
}
.move-down{
  position: absolute;
  left: 50%;
  bottom: 25%;
          transform: translate(-50%,-25%);
}
.material-icons{
line-height: normal;
}
i{
color: $text !important;
}
input {
&:not([type]):focus:not([readonly]), &[type=text]:not(.browser-default):focus:not([readonly]), &[type=password]:not(.browser-default):focus:not([readonly]), &[type=email]:not(.browser-default):focus:not([readonly]), &[type=url]:not(.browser-default):focus:not([readonly]), &[type=time]:not(.browser-default):focus:not([readonly]), &[type=date]:not(.browser-default):focus:not([readonly]), &[type=datetime]:not(.browser-default):focus:not([readonly]), &[type=datetime-local]:not(.browser-default):focus:not([readonly]), &[type=tel]:not(.browser-default):focus:not([readonly]), &[type=number]:not(.browser-default):focus:not([readonly]), &[type=search]:not(.browser-default):focus:not([readonly]) {
  border-bottom: 1px solid #38FAA6;
  -webkit-box-shadow: 0 1px 0 0 #38FAA6;
  box-shadow: 0 1px 0 0 #38FAA6;
}
}

textarea.materialize-textarea:focus:not([readonly]) {
border-bottom: 1px solid #FE3959;
-webkit-box-shadow: 0 1px 0 0 #FE3959;
box-shadow: 0 1px 0 0 #FE3959;
}

input[type=text],input[type=password],input[type=email],input[type=number]{
color: $text;
}


//Spinner

.loader{
  background-image: url('/images/loader.gif') !important;
  
}


.btn{ /* ff3.6+ */
  width:140.567px;
  background-position:center;
  background-repeat:no-repeat;
  background-color:$prim-darker;
}
.btn-actions{
  background: transparent !important;
  box-shadow:none;
  padding-right: 5px;
  margin: 0;
  &:hover{
    box-shadow: none !important;
  }
}
td,th{
  padding: 35px 5px;
}
.no-mt{
  margin-top: 0 !important;
}

.btn:focus, .btn-large:focus, .btn-floating:focus{
  background-color: $prim-darker;
}


.flash-error{
color:#FF4073;
position: absolute;
left: 50%;
-webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
        transform: translateX(-50%);
height: 20px;
i{
  margin-top: -3px;
}
font-family: $robo;
white-space: normal;
min-width: 218px;
}
.center-horizontal{
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
}
.flash-success{
  color:$green;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
  height: 20px;
  i{
    margin-top: -3px;
  }
  font-family: $robo;
  white-space: normal;
  min-width: 218px;
}

.hide{
visibility: hidden;
}
.top-left{
position: absolute;
top: 0;
left: 0;
margin: 3em;
i{
  font-size: 3em;
}
}
.overview{
  margin-top: 3%;
li{
margin: 0 auto !important;
}
}
.card-title{
  font-family: $mons;
  text-transform: uppercase;
  font-weight: 300 !important;
  letter-spacing: 1.3px;
  font-size: 1.1em !important;
}
.item{
  font-size: 0.2em;
  font-family: $mons;
  font-weight: 300;
}
.modal-content{
background: $primary;
h4{
  i{
    font-size: 0.5em;
  }
  font-family: $mons;
  text-transform: uppercase !important;
  color: $text;
}
p{

  padding: 2px;
  i{
    position: absolute;
    top:22.3%;
    left: 18%;
  }
}
}
.actions{
  width: 0px;
  display: inline-flex;
  margin: 0;
  padding-right: 4px;
  position: absolute;
  right: 36%;
  top: 29.5%;
transform: translate(36%,-29.5%);
}
.ddisabled{
  background-color: none !important;
  pointer-events: none;
 i{
  color: gray !important;
 }
}




/* ----------- iPhone 4 and 4S ----------- */

/* Portrait */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 480px)
  and (orientation: portrait) {
    .move-down{
      bottom: -6.5%;
      transform: translate(-50%,6.5%);
      margin-bottom: 25px !important;
      white-space: nowrap;
      
    }
    .top-left{
      margin-left: 1.1em;
      i{
        font-size: 2.8em;
      }
    }
   .bottom{
     display: none;
   }
}

/* Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 480px)
  and (orientation: landscape) {
    .move-down{
      bottom: -58%;
      transform: translate(-50%,58%);
      white-space: nowrap;
     margin-bottom: 20px !important;
    }
}

/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

/* Portrait*/
@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation:portrait) {
  .register{
    font-size: 3.5em
  }
  h1{
    font-size: 2.7em;
    margin-top: 1.1em;
  }
  .top-left{
    margin-left: 1em;
    i{
      font-size: 2.8em;
    }
  }
  i.left {
          margin-right: 0px;
      }
    .bottom{
      visibility: hidden;
    }
    .move-down{
      bottom: 10%;
              transform: translate(-50%,-10%);
      white-space: nowrap;
     
    }
}

/* Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (orientation: landscape) {

    .move-down{
      bottom: -50%;
              transform: translate(-50%,50%);
      white-space: nowrap;
      margin-bottom: 5px !important
  
    }
}


/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

@media only screen
and (min-device-width: 375px) 
and (max-device-width: 667px) 
and (-webkit-min-device-pixel-ratio: 2)
and (orientation:portrait)
{
.bottom{
  visibility: visible;
}
}
/* ... */

